--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,15 @@ apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs"
 
 android {
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
     compileSdkVersion 30
     defaultConfig {
         applicationId "com.example.android.marsrealestate"
@@ -44,6 +53,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
+    implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$version_kotlin"
 
