--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,9 +53,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
+
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
-    implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
-    // Kotlin
+    implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"    // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$version_kotlin"
 
     // Constraint Layout
